assets cleanup, static images added and hover effect for buttons

--- a/src/data/Projects.json
+++ b/src/data/Projects.json
@@ -3,6 +3,7 @@
         "dataId": "1",
         "webHref": "https://content-solutions.s3.ca-central-1.amazonaws.com/courseware/showcase/k8-interactives/lessons/flashcards.html",
         "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Flashcards.PNG",
+        "staticSrc": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Static-Proj-img/Flashcards.png",
         "text": "Flashcards ILO",
         "description": "Flashcards is an interactive learning object that can be inserted into TVO elementary courses and is currently being used by the Ontario Ministry of Education. This ILO features a fully configurable json file to include images, text and audio with front and back cards. The ILO is fully responsive and AODA compliant.",
         "repoLink": "https://gitlab.tvo.org/digital-learning/interactives/flashcards",
@@ -30,6 +31,7 @@
         "dataId": "2",
         "webHref": "https://content-solutions.s3.ca-central-1.amazonaws.com/courseware/showcase/k8-interactives/lessons/flowchart.html",
         "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Flowchart.PNG",
+        "staticSrc": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Static-Proj-img/Flowcharts.png",
         "text": "Flowchart ILO",
         "description": "Flowcharts is an interactive learning object that can be inserted into TVO elementary courses and is currently being used by the Ontario Ministry of Education. This ILO features a fully configurable json file to switch between sequential and cyclical modes. The ILO is fully responsive and AODA compliant.",
         "repoLink": "https://gitlab.tvo.org/digital-learning/interactives/flowchart/",
@@ -57,6 +59,7 @@
         "dataId": "3",
         "webHref": "https://galaxyprotocol.io/",
         "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Galaxy.PNG",
+        "staticSrc": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Static-Proj-img/Galaxy.png",
         "text": "Galaaxy Protocol",
         "description": "Galaxy Protocol is a start-up cryptocurrency company. This webpage features a vibrant, modern day interpretation of a space theme. Users can learn more about cryptocurrency, keep up to date with the latest news from Galaxy Protocol and connect to their social media platforms. This is a fully responsive React app.",
         "repoLink": "https://github.com/HustinKava/GalaxyProtocol",
@@ -89,6 +92,7 @@
         "dataId": "4",
         "webHref": "https://guarded-dusk-24354.herokuapp.com/",
         "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/mindshare.PNG",
+        "staticSrc": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Static-Proj-img/Mindshare.png",
         "text": "MindShare",
         "description": "Mindshare is designed to help individuals who are facing the turmoil of isolation. Unlike social media where all your entries are at the scrutiny and judgment of your family, friends, and peers. Mindshare is meant to be a safe place where you can make meaningful inputs and track your mood and feelings over a time period.",
         "repoLink": "https://github.com/P3TeamTwo/p3",
@@ -136,6 +140,7 @@
         "dataId": "5",
         "webHref": "https://secret-savannah-64299.herokuapp.com/",
         "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/GoogleBookSearch.PNG",
+        "staticSrc": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Static-Proj-img/GoogleBookSearch.png",
         "text": "Google Book Search",
         "description": "Google Book Search is the ultimate library application where users are able to search for a book of their choice. The application uses the Google Books API. Users can see the book title, authors, image, description and a view more button. Users are able to save their favorite books and using Socket.IO a notification will appear.",
         "repoLink": "https://github.com/HustinKava/google-books-search",
@@ -183,6 +188,7 @@
         "dataId": "6",
         "webHref": "https://stormy-springs-60842.herokuapp.com/",
         "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/TravelItinerary.PNG",
+        "staticSrc": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Static-Proj-img/Travel-Planner.PNG",
         "text": "Let's Go Travel Planner",
         "description": "Let’s Go Travel Planner is a travel app that helps users plan their trips effortlessly. The app lets users input the name of the city that they would like to travel to. Whenever a user submits a city name, the app will display a list of recommendations for restaurants and activities to do in the city. Users will also be able to save itineraries.",
         "repoLink": "https://github.com/Mcilhaggis/lets-go-travel-planner",
@@ -225,6 +231,7 @@
         "dataId": "7",
         "webHref": "https://youtu.be/VeKhEJunMI0",
         "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Readme.PNG",
+        "staticSrc": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Static-Proj-img/ReadMe.png",
         "text": "Readme Generator",
         "description": "The Professional Readme Generator allows users to quickly and sufficiently create readme templates. The user will be asked a series of questions in which the user can tailor to their specific needs. Using Node.js and Inquirer, we are able to make use of the terminal’s CLI and generate the questions and answers needed.",
         "repoLink": "https://github.com/HustinKava/Professional-Readme-Generator",
@@ -247,6 +254,7 @@
         "dataId": "8",
         "webHref": "https://www.youtube.com/watch?v=g9tlIpv78nc&feature=youtu.be",
         "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/EmployeeTracker.PNG",
+        "staticSrc": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Static-Proj-img/Emp-Tracker.png",
         "text": "Employee Tracker",
         "description": "The Employee Tracker system is a must have for any organization to keep track of their staff, departments, managers, allocated budgets and employee salaries. This is a full CRUD application. Meaning, employers are able to Create, Read, Update and Delete entries that are saved into the database.",
         "repoLink": "https://github.com/HustinKava/Employee-Tracker",
