--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "portfolio",
-  "homepage": "https://HustinKava.github.io/portfolio",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -9,22 +8,17 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "emailjs-com": "^2.6.4",
-    "gh-pages": "^3.1.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-gsap": "^3.2.0",
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.40.2",
-    "swiper": "^6.5.5",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +41,6 @@
   "devDependencies": {
     "sass": "^1.49.7",
     "sass-loader": "^10.2.1",
-    "webpack": "^4.44.2"
+    "webpack": "4.44.2"
   }
 }
