--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,5 +29,4 @@ jobs:
          aws-region: ca-central-1
 
      - name: Deploy static site to S3 bucket
-       run: aws s3 sync . s3://hustin-portfolio --delete
-       run: aws s3 sync ./build s3://hustin-portfolio
+       run: aws s3 sync ./build s3://hustin-portfolio --delete
