--- a/src/data/Projects.json
+++ b/src/data/Projects.json
@@ -108,7 +108,7 @@
         "webHref": "https://galaxyprotocol.io/",
         "src": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Galaxy.PNG",
         "staticSrc": "https://s3-hustin-test-bucket.s3.ca-central-1.amazonaws.com/Static-Proj-img/Galaxy.png",
-        "text": "Galaaxy Protocol",
+        "text": "Galaxy Protocol",
         "description": "Galaxy Protocol is a start-up cryptocurrency company. This webpage features a vibrant, modern day interpretation of a space theme. Users can learn more about cryptocurrency, keep up to date with the latest news from Galaxy Protocol and connect to their social media platforms. This is a fully responsive React app.",
         "repoLink": "https://github.com/HustinKava/GalaxyProtocol",
         "bOne": "Repo",
